# cmake_tutorial

./: CMakeLists.txt  CMakeLists2.txt  README.md  main.cpp
include/: camera.h
src/: camera.cpp  library.cpp  library2.cpp
src/test/: main.cpp  test_casadi.cpp  test_qp.cpp
